<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#919191">


    <ProgressBar
        android:id="@+id/circle"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="291dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_2"
        android:indeterminate="false"
        android:max="200"
        android:progress="100"
        android:progressDrawable="@drawable/circle_1"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/trainingSetsQuantity"
        android:layout_width="484dp"
        android:layout_height="73dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:fontFamily="@font/monkey"
        android:gravity="center_horizontal"
        android:text="@string/starting_sets_timer"
        android:textColor="#000"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/trainingWorkQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/monkey"
        android:gravity="center_horizontal"
        android:text="@string/starting_work"
        android:textColor="#000"
        android:textSize="66sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />


    <TextView
        android:id="@+id/trainingRestQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/monkey"
        android:gravity="center_horizontal"
        android:text="@string/starting_rest"
        android:textColor="#000"
        android:textSize="66sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/trainingMotivationalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/monkey"
        android:gravity="center_horizontal"
        android:text="Entrena..."
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/trainingPausedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/monkey"
        android:gravity="center_horizontal"
        android:text="Pausa"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <Button
        android:id="@+id/pauseBtn"
        android:layout_width="117dp"
        android:layout_height="61dp"
        android:layout_weight="1"
        android:background="@drawable/pausa"
        android:fontFamily="@font/monkey"
        android:onClick="pauseTimer"
        android:textAllCaps="true"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="117dp"
        android:layout_height="61dp"
        android:layout_weight="1"
        android:background="@drawable/play"
        android:fontFamily="@font/monkey"
        android:onClick="continueTimer"
        android:textAllCaps="true"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/endBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:fontFamily="@font/monkey"
        android:text="@string/btn_end"
        android:textAllCaps="true"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="1dp" />


</android.support.constraint.ConstraintLayout>